// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Facebook 1 1`] = `
<Component
  big={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
  solidcircle={true}
>
  <ButtonFactory
    big={true}
    buttonComponent={[Function]}
    href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    message="I am so cool"
    name="Facebook"
    solidcircle={true}
  >
    <styled.a
      aria-label="Share on Facebook"
      href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Facebook"
    >
      <a
        aria-label="Share on Facebook"
        className="sc-bwzfXH ewcqji"
        href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Facebook"
      >
        <styled.div
          message="I am so cool"
          solidcircle={true}
        >
          <div
            className="sc-ifAKCX jzuEBQ"
          >
            <styled.div
              aria-hidden="true"
              solidcircle={true}
            >
              <div
                aria-hidden="true"
                className="sc-htpNat gylFwk"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="11.5"
                  />
                  <path
                    d="M15.84 9.5H13.5V8.48c0-.53.35-.65.6-.65h1.4v-2.3h-2.35c-2.3 0-2.65 1.7-2.65 2.8V9.5h-2v2h2v7h3v-7h2.1l.24-2z"
                  />
                </svg>
                 
                <span>
                  share on Facebook
                </span>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Facebook 2 1`] = `
<Component
  link="http://sharingbuttons.io"
  medium={true}
  message="I am so cool"
  solidcircle={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    medium={true}
    message="I am so cool"
    name="Facebook"
    solidcircle={true}
  >
    <styled.a
      aria-label="Share on Facebook"
      href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Facebook"
    >
      <a
        aria-label="Share on Facebook"
        className="sc-bwzfXH ewcqji"
        href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Facebook"
      >
        <styled.div
          message="I am so cool"
          solidcircle={true}
        >
          <div
            className="sc-ifAKCX jzuEBQ"
          >
            <styled.div
              aria-hidden="true"
              solidcircle={true}
            >
              <div
                aria-hidden="true"
                className="sc-htpNat gylFwk"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="11.5"
                  />
                  <path
                    d="M15.84 9.5H13.5V8.48c0-.53.35-.65.6-.65h1.4v-2.3h-2.35c-2.3 0-2.65 1.7-2.65 2.8V9.5h-2v2h2v7h3v-7h2.1l.24-2z"
                  />
                </svg>
                 
                <span>
                  Facebook
                </span>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Facebook 3 1`] = `
<Component
  link="http://sharingbuttons.io"
  message="I am so cool"
  small={true}
  solidcircle={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    message="I am so cool"
    name="Facebook"
    small={true}
    solidcircle={true}
  >
    <styled.a
      aria-label="Share on Facebook"
      href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Facebook"
    >
      <a
        aria-label="Share on Facebook"
        className="sc-bwzfXH ewcqji"
        href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Facebook"
      >
        <styled.div
          message="I am so cool"
          small={true}
          solidcircle={true}
        >
          <div
            className="sc-ifAKCX jzuEBQ"
          >
            <styled.div
              aria-hidden="true"
              solidcircle={true}
            >
              <div
                aria-hidden="true"
                className="sc-htpNat gylFwk"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="11.5"
                  />
                  <path
                    d="M15.84 9.5H13.5V8.48c0-.53.35-.65.6-.65h1.4v-2.3h-2.35c-2.3 0-2.65 1.7-2.65 2.8V9.5h-2v2h2v7h3v-7h2.1l.24-2z"
                  />
                </svg>
                 
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Facebook 4 1`] = `
<Component
  big={true}
  circle={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
>
  <ButtonFactory
    big={true}
    buttonComponent={[Function]}
    circle={true}
    href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    message="I am so cool"
    name="Facebook"
  >
    <styled.a
      aria-label="Share on Facebook"
      href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Facebook"
    >
      <a
        aria-label="Share on Facebook"
        className="sc-bwzfXH ewcqji"
        href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Facebook"
      >
        <styled.div
          message="I am so cool"
        >
          <div
            className="sc-ifAKCX ksIwnZ"
          >
            <styled.div
              aria-hidden="true"
            >
              <div
                aria-hidden="true"
                className="sc-htpNat dZQCuR"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="11.5"
                  />
                  <path
                    d="M15.84 9.5H13.5V8.48c0-.53.35-.65.6-.65h1.4v-2.3h-2.35c-2.3 0-2.65 1.7-2.65 2.8V9.5h-2v2h2v7h3v-7h2.1l.24-2z"
                  />
                </svg>
                 
                <span>
                  share on Facebook
                </span>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Facebook 5 1`] = `
<Component
  circle={true}
  link="http://sharingbuttons.io"
  medium={true}
  message="I am so cool"
>
  <ButtonFactory
    buttonComponent={[Function]}
    circle={true}
    href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    medium={true}
    message="I am so cool"
    name="Facebook"
  >
    <styled.a
      aria-label="Share on Facebook"
      href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Facebook"
    >
      <a
        aria-label="Share on Facebook"
        className="sc-bwzfXH ewcqji"
        href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Facebook"
      >
        <styled.div
          message="I am so cool"
        >
          <div
            className="sc-ifAKCX ksIwnZ"
          >
            <styled.div
              aria-hidden="true"
            >
              <div
                aria-hidden="true"
                className="sc-htpNat dZQCuR"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="11.5"
                  />
                  <path
                    d="M15.84 9.5H13.5V8.48c0-.53.35-.65.6-.65h1.4v-2.3h-2.35c-2.3 0-2.65 1.7-2.65 2.8V9.5h-2v2h2v7h3v-7h2.1l.24-2z"
                  />
                </svg>
                 
                <span>
                  Facebook
                </span>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Facebook 6 1`] = `
<Component
  circle={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
  small={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    circle={true}
    href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    message="I am so cool"
    name="Facebook"
    small={true}
  >
    <styled.a
      aria-label="Share on Facebook"
      href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Facebook"
    >
      <a
        aria-label="Share on Facebook"
        className="sc-bwzfXH ewcqji"
        href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Facebook"
      >
        <styled.div
          message="I am so cool"
          small={true}
        >
          <div
            className="sc-ifAKCX ksIwnZ"
          >
            <styled.div
              aria-hidden="true"
            >
              <div
                aria-hidden="true"
                className="sc-htpNat dZQCuR"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="11.5"
                  />
                  <path
                    d="M15.84 9.5H13.5V8.48c0-.53.35-.65.6-.65h1.4v-2.3h-2.35c-2.3 0-2.65 1.7-2.65 2.8V9.5h-2v2h2v7h3v-7h2.1l.24-2z"
                  />
                </svg>
                 
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Facebook 7 1`] = `
<Component
  big={true}
  link="http://sharingbuttons.io"
  message="I am so cool"
  solid={true}
>
  <ButtonFactory
    big={true}
    buttonComponent={[Function]}
    href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    message="I am so cool"
    name="Facebook"
    solid={true}
  >
    <styled.a
      aria-label="Share on Facebook"
      href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Facebook"
    >
      <a
        aria-label="Share on Facebook"
        className="sc-bwzfXH ewcqji"
        href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Facebook"
      >
        <styled.div
          message="I am so cool"
        >
          <div
            className="sc-ifAKCX ksIwnZ"
          >
            <styled.div
              aria-hidden="true"
              solid={true}
            >
              <div
                aria-hidden="true"
                className="sc-htpNat gylFwk"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.77 7.46H14.5v-1.9c0-.9.6-1.1 1-1.1h3V.5h-4.33C10.24.5 9.5 3.44 9.5 5.32v2.15h-3v4h3v12h5v-12h3.85l.42-4z"
                  />
                </svg>
                 
                <span>
                  share on Facebook
                </span>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Facebook 8 1`] = `
<Component
  link="http://sharingbuttons.io"
  medium={true}
  message="I am so cool"
  solid={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    medium={true}
    message="I am so cool"
    name="Facebook"
    solid={true}
  >
    <styled.a
      aria-label="Share on Facebook"
      href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Facebook"
    >
      <a
        aria-label="Share on Facebook"
        className="sc-bwzfXH ewcqji"
        href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Facebook"
      >
        <styled.div
          message="I am so cool"
        >
          <div
            className="sc-ifAKCX ksIwnZ"
          >
            <styled.div
              aria-hidden="true"
              solid={true}
            >
              <div
                aria-hidden="true"
                className="sc-htpNat gylFwk"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.77 7.46H14.5v-1.9c0-.9.6-1.1 1-1.1h3V.5h-4.33C10.24.5 9.5 3.44 9.5 5.32v2.15h-3v4h3v12h5v-12h3.85l.42-4z"
                  />
                </svg>
                 
                <span>
                  Facebook
                </span>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Facebook 9 1`] = `
<Component
  link="http://sharingbuttons.io"
  message="I am so cool"
  small={true}
  solid={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    message="I am so cool"
    name="Facebook"
    small={true}
    solid={true}
  >
    <styled.a
      aria-label="Share on Facebook"
      href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Facebook"
    >
      <a
        aria-label="Share on Facebook"
        className="sc-bwzfXH ewcqji"
        href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io"
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Facebook"
      >
        <styled.div
          message="I am so cool"
          small={true}
        >
          <div
            className="sc-ifAKCX ksIwnZ"
          >
            <styled.div
              aria-hidden="true"
              solid={true}
            >
              <div
                aria-hidden="true"
                className="sc-htpNat gylFwk"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.77 7.46H14.5v-1.9c0-.9.6-1.1 1-1.1h3V.5h-4.33C10.24.5 9.5 3.44 9.5 5.32v2.15h-3v4h3v12h5v-12h3.85l.42-4z"
                  />
                </svg>
                 
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Facebook 10 1`] = `
<Component
  solid={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://facebook.com/sharer/sharer.php?u="
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    name="Facebook"
    solid={true}
  >
    <styled.a
      aria-label="Share on Facebook"
      href="https://facebook.com/sharer/sharer.php?u="
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Facebook"
    >
      <a
        aria-label="Share on Facebook"
        className="sc-bwzfXH ewcqji"
        href="https://facebook.com/sharer/sharer.php?u="
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Facebook"
      >
        <styled.div>
          <div
            className="sc-ifAKCX ksIwnZ"
          >
            <styled.div
              aria-hidden="true"
              solid={true}
            >
              <div
                aria-hidden="true"
                className="sc-htpNat gylFwk"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.77 7.46H14.5v-1.9c0-.9.6-1.1 1-1.1h3V.5h-4.33C10.24.5 9.5 3.44 9.5 5.32v2.15h-3v4h3v12h5v-12h3.85l.42-4z"
                  />
                </svg>
                 
                <span>
                  Facebook
                </span>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Facebook 11 1`] = `
<Component
  circle={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    circle={true}
    href="https://facebook.com/sharer/sharer.php?u="
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    name="Facebook"
  >
    <styled.a
      aria-label="Share on Facebook"
      href="https://facebook.com/sharer/sharer.php?u="
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Facebook"
    >
      <a
        aria-label="Share on Facebook"
        className="sc-bwzfXH ewcqji"
        href="https://facebook.com/sharer/sharer.php?u="
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Facebook"
      >
        <styled.div>
          <div
            className="sc-ifAKCX ksIwnZ"
          >
            <styled.div
              aria-hidden="true"
            >
              <div
                aria-hidden="true"
                className="sc-htpNat dZQCuR"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="11.5"
                  />
                  <path
                    d="M15.84 9.5H13.5V8.48c0-.53.35-.65.6-.65h1.4v-2.3h-2.35c-2.3 0-2.65 1.7-2.65 2.8V9.5h-2v2h2v7h3v-7h2.1l.24-2z"
                  />
                </svg>
                 
                <span>
                  Facebook
                </span>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Facebook 11 2`] = `
<Component
  solidcircle={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://facebook.com/sharer/sharer.php?u="
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    name="Facebook"
    solidcircle={true}
  >
    <styled.a
      aria-label="Share on Facebook"
      href="https://facebook.com/sharer/sharer.php?u="
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Facebook"
    >
      <a
        aria-label="Share on Facebook"
        className="sc-bwzfXH ewcqji"
        href="https://facebook.com/sharer/sharer.php?u="
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Facebook"
      >
        <styled.div
          solidcircle={true}
        >
          <div
            className="sc-ifAKCX jzuEBQ"
          >
            <styled.div
              aria-hidden="true"
              solidcircle={true}
            >
              <div
                aria-hidden="true"
                className="sc-htpNat gylFwk"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="11.5"
                  />
                  <path
                    d="M15.84 9.5H13.5V8.48c0-.53.35-.65.6-.65h1.4v-2.3h-2.35c-2.3 0-2.65 1.7-2.65 2.8V9.5h-2v2h2v7h3v-7h2.1l.24-2z"
                  />
                </svg>
                 
                <span>
                  Facebook
                </span>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Facebook 12 1`] = `
<Component>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://facebook.com/sharer/sharer.php?u="
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    name="Facebook"
  >
    <styled.a
      aria-label="Share on Facebook"
      href="https://facebook.com/sharer/sharer.php?u="
      rel="noreferrer noopener"
      target="_blank"
      title="Share on Facebook"
    >
      <a
        aria-label="Share on Facebook"
        className="sc-bwzfXH ewcqji"
        href="https://facebook.com/sharer/sharer.php?u="
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Facebook"
      >
        <styled.div>
          <div
            className="sc-ifAKCX ksIwnZ"
          >
            <styled.div
              aria-hidden="true"
              solid={true}
            >
              <div
                aria-hidden="true"
                className="sc-htpNat gylFwk"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.77 7.46H14.5v-1.9c0-.9.6-1.1 1-1.1h3V.5h-4.33C10.24.5 9.5 3.44 9.5 5.32v2.15h-3v4h3v12h5v-12h3.85l.42-4z"
                  />
                </svg>
                 
                <span>
                  Facebook
                </span>
              </div>
            </styled.div>
          </div>
        </styled.div>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Facebook 13 1`] = `
<Component
  simple={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://facebook.com/sharer/sharer.php?u="
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    name="Facebook"
    simple={true}
  >
    <styled.a
      aria-label="Share on Facebook"
      href="https://facebook.com/sharer/sharer.php?u="
      rel="noreferrer noopener"
      simple={true}
      target="_blank"
      title="Share on Facebook"
    >
      <a
        aria-label="Share on Facebook"
        className="sc-bwzfXH ljNxya"
        href="https://facebook.com/sharer/sharer.php?u="
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Facebook"
      >
        <FacebookIconFill>
          <svg
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.77 7.46H14.5v-1.9c0-.9.6-1.1 1-1.1h3V.5h-4.33C10.24.5 9.5 3.44 9.5 5.32v2.15h-3v4h3v12h5v-12h3.85l.42-4z"
            />
          </svg>
        </FacebookIconFill>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;

exports[`Facebook 14 1`] = `
<Component
  simpleReverse={true}
>
  <ButtonFactory
    buttonComponent={[Function]}
    href="https://facebook.com/sharer/sharer.php?u="
    iconCircle={[Function]}
    iconCircleSolid={[Function]}
    iconFill={[Function]}
    name="Facebook"
    simpleReverse={true}
  >
    <styled.a
      aria-label="Share on Facebook"
      href="https://facebook.com/sharer/sharer.php?u="
      rel="noreferrer noopener"
      simpleReverse={true}
      target="_blank"
      title="Share on Facebook"
    >
      <a
        aria-label="Share on Facebook"
        className="sc-bwzfXH dqksVq"
        href="https://facebook.com/sharer/sharer.php?u="
        rel="noreferrer noopener"
        target="_blank"
        title="Share on Facebook"
      >
        <FacebookIconFill>
          <svg
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18.77 7.46H14.5v-1.9c0-.9.6-1.1 1-1.1h3V.5h-4.33C10.24.5 9.5 3.44 9.5 5.32v2.15h-3v4h3v12h5v-12h3.85l.42-4z"
            />
          </svg>
        </FacebookIconFill>
      </a>
    </styled.a>
  </ButtonFactory>
</Component>
`;
